# mctp-over-smbus

./: CMakeLists.txt
cmd/: CMakeLists.txt  main.c
include/mctp/mctp/: mctp.h
lib/mctp/: CMakeLists.txt  mctp.c
lib/smbus/: CMakeLists.txt
